tools/crates/vendor/toml_edit/tests/fixtures/invalid/datetime/no-t.stderr
TOML parse error at line 2, column 18
  |
2 | no-t = 1987-07-0517:45:00Z
  |                  ^
expected newline, `#`
